--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -27,12 +27,12 @@
             android:layout_height="wrap_content"
             android:text="@={myViewModel.inputString}"/>
 
+        <!-- android:onClick="@{()-> myViewModel.onMyClick()}" -->
         <Button
             android:id="@+id/btn_click"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:onClick="@{()-> myViewModel.onMyClick()}"
             android:text="click"/>
 
         <LinearLayout
