--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,46 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--Splash界面-->
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@mipmap/splash_screen</item>
+    </style>
+
+    <!-- 侧滑样式-->
+    <style name="SwipeBack.Transparent.Theme" parent="AppTheme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <!--<item name="android:windowAnimationStyle">@style/SwipeBack.Animation</item>-->
+        <!--<item name="android:actionBarStyle">@style/ActionBar.Custom</item>-->
+    </style>
+
+    <style name="SwipeBack.Animation" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/scale_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/scale_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/scale_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/scale_out</item>
+        <item name="android:wallpaperOpenEnterAnimation">@anim/scale_in</item>
+        <item name="android:wallpaperOpenExitAnimation">@anim/scale_out</item>
+        <item name="android:wallpaperCloseEnterAnimation">@anim/scale_in</item>
+        <item name="android:wallpaperCloseExitAnimation">@anim/scale_out</item>
+        <item name="android:wallpaperIntraOpenEnterAnimation">@anim/scale_in</item>
+        <item name="android:wallpaperIntraOpenExitAnimation">@anim/scale_out</item>
+        <item name="android:wallpaperIntraCloseEnterAnimation">@anim/scale_in</item>
+        <item name="android:wallpaperIntraCloseExitAnimation">@anim/scale_out</item>
+    </style>
+
+    <style name="ActionBar.Custom" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="displayOptions">showCustom</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="background">@android:color/transparent</item>
+        <item name="android:displayOptions">showCustom</item>
+        <item name="android:height">?actionBarSize</item>
+    </style>
+
+
+
 </resources>
