--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.online.meeting.activity.SplashActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@color/black"
+        android:textSize="30sp" />
+    
 </android.support.constraint.ConstraintLayout>
