--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,12 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorSplitLine">#10000000</color>
+    <color name="colorPage">#FFF0F2F7</color>
+
+    <color name="gray">#a0a0a0</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
+    <color name="orange">#FFF17317</color>
+    <color name="orange_dark">#FFD6710F</color>
 </resources>
