--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="transparent">#00000000</color>
     <color name="orange">#FFF17317</color>
     <color name="orange_dark">#FFD6710F</color>
+    <color name="light_gray">#FFCCCCCC</color>
+
 </resources>
