--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
+    <dimen name="process_dialog_width">240dp</dimen>
     <dimen name="top_total_height">48dp</dimen>
+    <dimen name="custom_dialog_width">200dp</dimen>
+    <dimen name="wire_frame_size">2px</dimen>
+
 
 </resources>
